ecmascript/parser/tests/test262-error-references/fail/d942f64886578d87.module.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/d942f64886578d87.module.js:1:7
  |
1 | import
  |       ^

